mdssvc: implement elasticsearch:default_fields

BUG: https://bugzilla.samba.org/show_bug.cgi?id=15927

Signed-off-by: Ralph Boehme <slow@samba.org>
Reviewed-by: Volker Lendecke <vl@samba.org>
(cherry picked from commit 2b5cbb955ab2cf278272aa8457a672aa27ff1020)